--- a/style.css
+++ b/style.css
@@ -52,3 +52,13 @@ body {
     padding: 10px 0;
   }
   
+  .images-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    }
+    
+    .images-container img {
+        max-width: 100%;
+        height: auto;
+    }
